Fixed label align

--- a/app/css/form.scss
+++ b/app/css/form.scss
@@ -52,6 +52,7 @@ $button_color_text: #000000;
   height: $form_height;
   display: inline-block;
   vertical-align: middle;
+  text-align: left;
 
   &__label {
     display: block;
@@ -72,6 +73,7 @@ $button_color_text: #000000;
     height: $input_height;
     border: none;
     color: $button_color_text;
+
   }
 
   &__submit-button {
